[package]
name = "rustboy-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3.57"
log = "0.4.20"
rustboy-core = "0.2.0"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.57", features = ["AnalyserNode", "console", "Worklet", "Performance", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "AudioContext", "AudioParam", "AudioParamMap", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "OscillatorNode", "BiquadFilterNode", "BiquadFilterType", "AudioDestinationNode", "AudioBuffer", "AudioBufferSourceNode", "GainNode", "MessagePort"] }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
